@@ -4,6 +4,7 @@ import javax.swing.*;
 
 import edu.colorado.phet.common.phetcommon.application.Module;
 import edu.colorado.phet.common.piccolophet.PhetPCanvas;
+import edu.colorado.phet.common.piccolophet.event.PDebugKeyHandler;
 import edu.colorado.phet.common.piccolophet.nodes.RulerNode;
 import edu.colorado.phet.rotation.model.RotationPlatform;
 import edu.colorado.phet.rotation.view.RotationPlayAreaNode;
@@ -19,6 +20,9 @@ public class AbstractIntroSimulationPanel extends PhetPCanvas {
     private RotationPlatform rotationPlatform;
 
     public AbstractIntroSimulationPanel( final JComponent contentPane, Module module ) {
+
+        addKeyListener( new PDebugKeyHandler() );
+        requestFocus();
     }
 
     protected void init( RotationPlayAreaNode playAreaNode, PNode introSimControlPanelPSwing, RotationPlatform rotationPlatform ) {
