@@ -4,6 +4,7 @@ import javax.swing.*;
 
 import edu.colorado.phet.rotation.AbstractIntroSimulationPanel;
 import edu.colorado.phet.rotation.view.AbstractRotationSimulationPanel;
+import edu.colorado.phet.common.piccolophet.event.PDebugKeyHandler;
 import edu.umd.cs.piccolox.pswing.PSwing;
 
 /**
